[package]
name = "card_server"
version = "0.1.0"
authors = ["육심현 <simoncreek@tutanota.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.8"
serde = {version = "1.0.118", features = ["derive"]}
serde_json = "1.0.61"
tokio = {version ="0.2.23", features =["full"]}
uuid = {version = "0.8.1" , features =["v4"]}
warp = "0.2.5"
